double scrolling fixed

--- a/app/sass/components/_transitionCircle.scss
+++ b/app/sass/components/_transitionCircle.scss
@@ -10,6 +10,6 @@
   transition-duration: 0.5s;
   transition-timing-function: ease-in-out;
   overflow-x: hidden;
-  background: #222;
+  background: $bgColor;
   clip-path: circle(1px at calc(100% - 45px) 45px);
 }
