--- a/app/sass/components/nav/_navButton.scss
+++ b/app/sass/components/nav/_navButton.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     position: fixed;
     right: $right;
-    background: transparent;
+    background: $bgColor;
     width: $size;
     height: $size;
     border-radius: 50%;
