--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -9,18 +9,17 @@
 
 body {
   background: $bgColor;
-  overflow-x: hidden;
+  // overflow: hidden;
   // box-shadow: inset 0 0 100px rgb(10, 10, 10);
 }
 
 body #home-arc {
   position: relative;
-  overflow-x: hidden;
   width: 100%;
 }
  
 body #web-logo {
-  position:absolute; 
+  position: absolute; 
   max-height: 60px; 
   left: 50px; 
   top: 3vh;
